[package]
name = "gitleaks-dedup"
version = "0.1.0"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Deduplicate gitleaks findings"
repository = "https://github.com/martinohmann/gitleaks-dedup"
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive", "env"] }
clap_derive = "4.5.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
